--- a/index.html
+++ b/index.html
@@ -3,14 +3,27 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ivan Tulinov</title>
+		<link rel="stylesheet" href="style.css" media="screen">
 	</head>
 	<body>
 		<header>
-			<img src="img\keyboard.png" alt="logo" width="128" height="72"></img>
-			<p>Иван Тулинов</p>
-			<p>energiay@gmail.com</p>
-			<p>79601011060</p>
+			<div class="container">
 			
+			<img src="img\keyboard.png" alt="logo" width="128" height="72"></img>
+			<div>Иван Тулинов</div>
+			<div>energiay@gmail.com</div>
+			<div>+79601011060</div>
+			<div></div>
+			<nav>
+				<ul>
+					<li>Резюме</li>
+					<li>Портфолио</li>
+					<li>Хобби</li>
+					<li>Блог</li>
+				</ul>
+			</nav>
+			
+			<div>
 		</header>
 	</body>
 </html>
