--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 	<body>
 		<header>
 			<div class="container">
-			
-			<img src="img\keyboard.png" alt="logo" width="128" height="72"></img>
-			<div>Иван Тулинов</div>
-			<div>energiay@gmail.com</div>
-			<div>+79601011060</div>
-			<div></div>
-			<nav>
-				<ul>
-					<li>Резюме</li>
-					<li>Портфолио</li>
-					<li>Хобби</li>
-					<li>Блог</li>
-				</ul>
-			</nav>
+				
+				<div>
+					<img src="img\keyboard.png" alt="logo" width="128" height="72"></img>
+					<div>Иван Тулинов</div>
+				</div>
+				<div>energiay@gmail.com</div>
+				<div>+79601011060</div>
+				<div></div>
+				<nav>
+					<ul>
+						<li>Резюме</li>
+						<li>Портфолио</li>
+						<li>Хобби</li>
+						<li>Блог</li>
+					</ul>
+				</nav>
 			
 			<div>
 		</header>
