--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="container">
 				
 				<div>
-					<img src="img\keyboard.png" alt="logo" width="128" height="72"></img>
+					<img src="img/keyboard.png" alt="logo" width="128" height="72"></img>
 					<div>Иван Тулинов</div>
 				</div>
 				<div>energiay@gmail.com</div>
