--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
 			<div>
 		</header>
 		<div class="lineHead"></div>
+		
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
+  nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.</p>
+ 
 	</body>
 </html>
