--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
 					<div>energiay@gmail.com</div>
 					<div>+79601011060</div>
 				</div>
-				<div class="clear"></div>
+				
 
 			<div>
+			<div class="clear"></div>
 		</header>
+		
 		<div class="lineHead"></div>
 		
-		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diem 
-  nonummy nibh euismod tincidunt ut lacreet dolore magna aliguam erat volutpat.</p>
- 
+		<div class="container">
+			<h1>Резюме</h1>
+		</div>
+			
 	</body>
 </html>
