--- a/index.html
+++ b/index.html
@@ -38,15 +38,27 @@
 			<div>
 			<div class="clear"></div>
 		</header>
-		
 		<div class="lineHead"></div>
 		
 		<div class="container">
 			<h1>Резюме</h1>
 		</div>
 			
+		<div class="container">
+			<div class="all">
+				<div class="borderSkils">
+					<p>
+					<span class="title">Общее:</span> <br />
+		- BackEnd разработчик <br />
+		- FrontEnd разработчик <br />
+		- Верстальщик <br />
+		- Дизайнер <br />
+					</p>
+				</div>
+			</div>
+		</div>
 		
-		<div class="lineHead"></div>
+		<div class="linefooter"></div>
 		<div class="clear"></div>
 		<footer>
 			<div class="container">
