--- a/index.html
+++ b/index.html
@@ -49,15 +49,49 @@
 				<div class="borderSkils">
 					<p>
 					<span class="title">Общее:</span> <br />
-		- BackEnd разработчик <br />
-		- FrontEnd разработчик <br />
-		- Верстальщик <br />
-		- Дизайнер <br />
+- BackEnd разработчик <br />
+- FrontEnd разработчик <br />
+- Верстальщик <br />
+- Дизайнер <br />
+					</p>
+				</div>
+				<div class="borderSkils">
+					<p>
+					<span class="title">Навыки:</span> <br />
+- Проектирование<br />
+- Прототипирование<br />
+- Дизайн<br />
+- Кодирование<br />
+- Тестирование<br />
+- Внедрение<br />
+- Сопровождение<br />
+					</p>
+				</div>
+				<div class="borderSkils">
+					<p>
+					
+
+					<span class="title">Технологии:</span> <br />
+- ASP.NET MVC<br />
+- MS SQL<br />
+- HTML (5) / CSS (3)<br />
+- JavaScript<br />
+					</p>
+				</div>
+				<div class="borderSkils">
+					<p>
+					:
+
+					<span class="title">Дополнительно:</span> <br />
+- Agile, Scrum<br />
+- Git<br />
+- Trello <br />
 					</p>
 				</div>
 			</div>
 		</div>
 		
+		<div class="clear"></div>
 		<div class="linefooter"></div>
 		<div class="clear"></div>
 		<footer>
