--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" name='yandex-verification' content='60be9be207048b67'>
+		<meta charset="utf-8">
 		<title>Ivan Tulinov</title>
 		<link rel="stylesheet" href="style.css" media="screen">
 		
@@ -49,10 +49,10 @@
 				<div class="borderSkils">
 					<p>
 					<span class="title">Общее:</span> <br />
-	- BackEnd разработчик <br />
-	- FrontEnd разработчик <br />
-	- Верстальщик <br />
-	- Дизайнер <br />
+- BackEnd разработчик <br />
+- FrontEnd разработчик <br />
+- Верстальщик <br />
+- Дизайнер <br />
 					</p>
 				</div>
 				<div class="borderSkils">
@@ -69,8 +69,6 @@
 				</div>
 				<div class="borderSkils">
 					<p>
-					
-
 					<span class="title">Технологии:</span> <br />
 - ASP.NET MVC<br />
 - MS SQL<br />
@@ -80,8 +78,6 @@
 				</div>
 				<div class="borderSkils">
 					<p>
-					:
-
 					<span class="title">Дополнительно:</span> <br />
 - Agile, Scrum<br />
 - Git<br />
