Добавил баннер и допилил скилы

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 			<div class="clear"></div>
 		</header>
 		<div class="lineHead"></div>
-		
 		<div class="container">
-			<h1>Резюме</h1>
+			<div class="containerBanner">
+				<img class="banner" src="img/banner.jpg" alt="banner" height="482"></img>
+			</div>
 		</div>
 			
 		<div class="container">
@@ -84,6 +85,43 @@
 - Trello <br />
 					</p>
 				</div>
+			</div>
+		</div>
+		
+		<div class="container">
+			<div class="borderSkilsTheRest">
+				<p class="titleRest">Навыки за 8 лет работы в банковской сфере:</p>
+				<p class="SkilsOfBank">
+					<span class="titleBank">R-Style:</span> <br />
+- 8 лет разработки на RSL (RS-Bank, RS-Retail); <br />
+- Сопровождение, настройка, написание и адаптация макросов; <br />
+- Опыт перехода с RS-Bank на ЦФТ <br />
+				</p>
+				<p class="SkilsOfBank">
+					<span class="titleBank">Windows Script Host:</span> <br />
+- написание макросов на JScript для автоматизации<br />
+рутинных, ежедневных задач <br />
+<br />
+				</p>
+				<p class="SkilsOfBank">
+					<span class="titleBank">Банковское ПО:</span> <br />
+- работы с крипто системами (КА и шифрование):УТА, КМ, <br />
+АРМ КБР, АРМ ПУР, СКАД «Сигнатура», Верба;<br />
+- полное сопровождение платежей и отчетности в ЦБ;<br />
+- Клиент-Банк (Bifit)<br />
+				</p>
+				<p class="SkilsOfBank">
+					<span class="titleBank">Системное администрирование:</span> <br />
+- развертывание и настройка ActiveDirectory, DNS, DHCP, TMG(ISA), WSUS;<br />
+- написание макросов для GPO на WSH;<br />
+- управление резервным копированием (в  т.ч. Acronis);<br />
+- развертывание и сопровождение Jaber клиента в внутренней сети;<br />
+- централизованное развертывание и сопровождение антивирусного ПО;<br />
+- настройка миниАТС (Panasonic KX-TDA100);<br />
+- развертывание и настройка серверов/рабочих станций; <br />
+- программная виртуализация;<br />
+- сопровождение почтового сервера (IBM Lotus Domino Server)<br />
+				</p>
 			</div>
 		</div>
 		
