--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		<div class="container">
 			<div class="containerBanner">
 				<img class="banner" src="img/banner.jpg" alt="banner" height="482"></img>
+				<p class="bannerText"><span class="bannerTitle">Резюме</span><br />web-мастерингом занимаюсь с марта 2015 года</p>
 			</div>
 		</div>
 			
