--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="lineHead"></div>
 		<div class="container">
 			<div class="containerBanner">
-				<img class="banner" src="img/banner.jpg" alt="banner" height="482"></img>
+				<img class="banner" src="img/banner.jpg" alt="mybanner"></img>
 				<p class="bannerText"><span class="bannerTitle">Резюме</span><br />web-мастерингом занимаюсь с марта 2015 года</p>
 			</div>
 		</div>
