--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				
 				<nav>
 					<ul>
-						<li><a href="#">Резюме</a></li>
-						<li><a href="#">Портфолио</a></li>
+						<li><a href="index.html">Резюме</a></li>
+						<li><a href="portfolio.html">Портфолио</a></li>
 						<li><a href="#">Хобби</a></li>
 						<li><a href="#">Блог</a></li>
 					</ul>
