Добавил к ссылкам меню эффект нахождения на данной странице

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Резюме</a></li>
-						<li><a href="portfolio.html">Портфолио</a></li>
+						<li><a class="action" href="portfolio.html">Портфолио</a></li>
 						<li><a href="#">Хобби</a></li>
 						<li><a href="#">Блог</a></li>
 					</ul>
