Центруем слово портфолио по середине стр.

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,9 @@
 		
 		<div class="container">
 			<div class="containerBanner">
-				<p class="bannerTextPortfolio">Портфолио</p>
+				<div class="centerP">
+					<p class="bannerTextPortfolio">Портфолио</p>
+				</div>
 				<img class="bannerPortfolio" src="img/bannerPortfolio.jpg" alt="banner"></img>
 			</div>
 			
