--- a/hobby.html
+++ b/hobby.html
@@ -22,8 +22,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Резюме</a></li>
-						<li><a class="action" href="portfolio.html">Портфолио</a></li>
-						<li><a href="hobby.html">Хобби</a></li>
+						<li><a href="portfolio.html">Портфолио</a></li>
+						<li><a class="action" href="hobby.html">Хобби</a></li>
 						<li><a href="#">Блог</a></li>
 					</ul>
 				</nav>
@@ -39,15 +39,17 @@
 		
 		
 		<div class="container">
-			<div class="containerBanner">
-				<div class="centerP">
-					<p class="bannerTextPortfolio">Портфолио</p>
-				</div>
-				<img class="bannerPortfolio" src="img/bannerPortfolio.jpg" alt="banner"></img>
+			<div class="containerBannerHobby">
+				<img class="bannerPortfolio" src="img/FootballField.png" alt="banner"></img>
 			</div>
-			
-			<div class="contentPortfolio">
-				
+			<div class="AllignComposition">
+				<p class="composition">Я являюсь спортивным человеком. Спортом занимаюсь всю сознательную жизнь. Начинал с гимнастики, потом переключился на вольную борьбу … все это казалось не мое. В 10 лет занялся Дзю-До и за 4 года занятия этим спортом добился первого юношеского разряда. В 16 лет я попробовал футбол ... и понял, вот то, что я люблю. И уже тринадцать лет я отдаю этому спорту все свое свободное время. За это время я успел скопить маленькую коробку грамот, медалей и статуэток )) Участвую в областных, районных и городских соревнованиях как по мини так и большому футболу.</p>
+			</div>
+			<div class="containerBannerHobby">
+				<img class="boast" src="img/boast.png" alt="banner"></img>
+			</div>
+			<div class="containerBannerHobby">
+				<img class="collage" src="img/collage.png" alt="banner"></img>
 			</div>
 		</div>
 		
