--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 		<meta charset="utf-8">
 		<title>Ivan Tulinov</title>
 		<link rel="stylesheet" href="style.css" media="screen">
-		
+		<link href='https://fonts.googleapis.com/css?family=Fira+Sans:700,300,400' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				
 				<div class="logoStatic">
 					<div class="logo">
 						<div id="circle"></div>
@@ -24,7 +23,7 @@
 					<ul>
 						<li><a class="action" href="index.html">Резюме</a></li>
 						<li><a href="portfolio.html">Портфолио</a></li>
-						<li><a href="#">Хобби</a></li>
+						<li><a href="hobby.html">Хобби</a></li>
 						<li><a href="#">Блог</a></li>
 					</ul>
 				</nav>
