Похоже черновой вариант готов...

--- a/blog.html
+++ b/blog.html
@@ -23,8 +23,8 @@
 					<ul>
 						<li><a href="index.html">Резюме</a></li>
 						<li><a href="portfolio.html">Портфолио</a></li>
-						<li><a class="action" href="hobby.html">Хобби</a></li>
-						<li><a href="blog.html">Блог</a></li>
+						<li><a href="hobby.html">Хобби</a></li>
+						<li><a class="action" href="blog.html">Блог</a></li>
 					</ul>
 				</nav>
 				
@@ -37,23 +37,13 @@
 		</header>
 		<div class="lineHead"></div>
 		
-		
-		<div class="container">
-			<div class="containerBannerHobby">
-				<img class="bannerPortfolio" src="img/FootballField.png" alt="banner"></img>
-			</div>
-			<div class="AllignComposition">
-				<p class="composition">Я являюсь спортивным человеком. Спортом занимаюсь всю сознательную жизнь. Начинал с гимнастики, потом переключился на вольную борьбу … это оказалось не мое. В 10 лет занялся Дзю-До и за 4 года занятия этим спортом добился первого юношеского разряда. В 16 лет случай меня свел с футболом ... и понял, вот то, что я люблю. И уже тринадцать лет я отдаю этому спорту все свое свободное время. За это время я успел скопить коробку грамот, медалей и статуэток )) Участвую в областных, районных и городских соревнованиях как по мини так и большому футболу.</p>
-			</div>
-			<div class="containerBannerHobby">
-				<img class="boast" src="img/boast.png" alt="banner"></img>
-			</div>
-			<div class="containerBannerHobby">
-				<img class="collage" src="img/collage.png" alt="banner"></img>
-			</div>
+		<div class="containerBady">
+			<img class="ax" src="img/ax.png" alt="banner"></img>
+			<p class="textConstructor">
+				Извините, данный раздел находится в разработке
+			</p>
 		</div>
-		
-		
+		<div class="clear"></div>
 		<div class="linefooter"></div>
 		<div class="clear"></div>
 		<footer>
