--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a class="action" href="index.html">Резюме</a></li>
 						<li><a href="portfolio.html">Портфолио</a></li>
 						<li><a href="hobby.html">Хобби</a></li>
-						<li><a href="#">Блог</a></li>
+						<li><a href="blog.html">Блог</a></li>
 					</ul>
 				</nav>
 				
