--- a/hobby.html
+++ b/hobby.html
@@ -46,7 +46,31 @@
 				<p class="composition">Я являюсь спортивным человеком. Спортом занимаюсь всю сознательную жизнь. Начинал с гимнастики, потом переключился на вольную борьбу … это оказалось не мое. В 10 лет занялся дзю-до и за 4 года занятия этим спортом добился первого юношеского разряда. В 14 лет случай меня свел с футболом ... и понял, вот то, что я люблю. И уже пятдадцать лет я отдаю этому спорту все свое свободное время. За это время я успел скопить коробку грамот, медалей и статуэток )) Участвую в областных, районных и городских соревнованиях как по мини так и большому футболу.</p>
 			</div>
 			<div class="containerBannerHobby">
-				<img class="boast" src="img/boast.png" alt="banner"></img>
+				<div class="ImgText">
+					<img class="image" src="img/img01_mini.jpg" alt="banner"></img>
+					<br />
+					<p class="img01Text">
+						<span class="imgTitle">ЛВЗ чемпион 2016</span> <br />
+						В январе 2016 года команда ЛВЗ успешно заняла первое место в открытом первенстве Рамонского района по мини-футболу.
+					</p>
+				</div>
+				<div class="ImgText">
+					<img class="image" src="img/img02_mini.jpg" alt="banner"></img>
+					<br />
+					<p class="img02Text">
+						<span class="imgTitle">Третье место на Кубани</span> <br />
+						Фанаты Воронежского Факела совершили турне на кубанскую землю и заняли там почетное третье место
+					</p>
+				</div>
+				<div class="ImgText">
+					<img class="image" src="img/img03_mini.jpg" alt="banner"></img>
+					<br />
+					<p class="img03Text">
+						<span class="imgTitle">Турне в Москву</span> <br />
+						Команда Дороги Черноземья успешно выступает в турнире,  среди команд дорог России, на базе ФК Спартак Москва
+					</p>
+				</div>
+
 			</div>
 			<div class="containerBannerHobby">
 				<img class="collage" src="img/collage.png" alt="banner"></img>
