--- a/hobby.html
+++ b/hobby.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Ivan Tulinov</title>
 		<link rel="stylesheet" href="style.css" media="screen">
+		<link rel="icon" href="img/ico.png" type="image/x-icon">
 		<link href='https://fonts.googleapis.com/css?family=Fira+Sans:700,300,400' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
