--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<div class="container">
 			<div class="containerBanner">
 				<p class="bannerText"><span class="bannerTitle">Резюме</span><br />web-мастерингом занимаюсь с марта 2015 года</p>
-				<img class="banner" src="img/bannerResume.jpg" alt="mybanner"></img>
+				<img class="banner" src="img/bannerResume.png" alt="mybanner"></img>
 			</div>
 		</div>
 		<div class="container">
