--- a/hobby.html
+++ b/hobby.html
@@ -44,7 +44,7 @@
 				<img class="bannerPortfolio" src="img/FootballField.png" alt="banner"></img>
 			</div>
 			<div class="AllignComposition">
-				<p class="composition">Я являюсь спортивным человеком. Спортом занимаюсь всю сознательную жизнь. Начинал с гимнастики, потом переключился на вольную борьбу … это оказалось не мое. В 10 лет занялся дзю-до и за 4 года занятия этим спортом добился первого юношеского разряда. В 14 лет случай меня свел с футболом ... и понял, вот то, что я люблю. И уже пятдадцать лет я отдаю этому спорту все свое свободное время. За это время я успел скопить коробку грамот, медалей и статуэток )) Участвую в областных, районных и городских соревнованиях как по мини так и большому футболу.</p>
+				<p class="composition">Я являюсь спортивным человеком. Спортом занимаюсь всю сознательную жизнь. Начинал с гимнастики, потом переключился на вольную борьбу … это оказалось не мое. В 10 лет занялся дзю-до и за 4 года занятия этим спортом добился первого юношеского разряда. В 14 лет случай меня свел с футболом ... и понял, вот то, что я люблю. И уже пятнадцать лет я отдаю этому спорту все свое свободное время. За это время я успел скопить коробку грамот, медалей и статуэток )) Участвую в областных, районных и городских соревнованиях как по мини так и большому футболу.</p>
 			</div>
 			<div class="containerBannerHobby">
 				<div class="ImgText">
