--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<div class="logo">
 						<div id="circle"></div>
 						<div class="contKeyboard">
-							<img class="keyboard" src="img/keyboard.png" alt="logo" width="128" height="72"></img>
+							<img class="keyboard" src="img/keyboard.png" alt="logo" width="128" height="72">
 						</div>
 					</div>
 				</div>
@@ -33,9 +33,7 @@
 					<div class="email">energiay@gmail.com</div>
 					<div class="tel">+79601011060</div>
 				</div>
-				
-
-			<div>
+			</div>
 			<div class="clear"></div>
 		</header>
 		<div class="lineHead"></div>
