--- a/index.html
+++ b/index.html
@@ -44,28 +44,30 @@
 				<img class="banner" src="img/bannerResume.png" alt="mybanner"></img>
 			</div>
 			-->
-			<div class="slider">
-				<div class="slider__images">
-					<div class="slider__images-wrap">
-						<img src="img/example-slide-1.jpg" alt="Photo 1">
-						<img src="img/example-slide-2.jpg" alt="Photo 2">
-						<img src="img/example-slide-3.jpg" alt="Photo 3">
-						<img src="img/example-slide-4.jpg" alt="Photo 4">
+			<div class="cut">
+				<div class="slider">
+					<div class="slider__images">
+						<div class="slider__images-wrap">
+							<img src="img/example-slide-1.jpg" alt="Photo 1">
+							<img src="img/example-slide-2.jpg" alt="Photo 2">
+							<img src="img/example-slide-3.jpg" alt="Photo 3">
+							<img src="img/example-slide-4.jpg" alt="Photo 4">
+						</div>
 					</div>
-				</div>
 
-				<div class="slider__navigation">
+					<div class="slider__navigation">
 
-					<a href="#" class="slider__pager slider__pager_previous"><i class="icon-chevron-left icon-large"></i></a>
-					<a href="#" class="slider__pager slider__pager_next"><i class="icon-chevron-right icon-large"></i></a>
+						<a href="#" class="slider__pager slider__pager_previous"><i class="icon-chevron-left icon-large"></i></a>
+						<a href="#" class="slider__pager slider__pager_next"><i class="icon-chevron-right icon-large"></i></a>
 
-					<ul class="slider__pagination">
-						<!--<li class="slider__pagination-item slider__pagination-item_tmpl"><a href="#" data-slider__item="0">0</a></li>-->
-						<li class="slider__pagination-item"><a href="#" data-slider__item="0" class="active"></a></li>
-						<li class="slider__pagination-item"><a href="#" data-slider__item="1"></a></li>
-						<li class="slider__pagination-item"><a href="#" data-slider__item="2"></a></li>
-						<li class="slider__pagination-item"><a href="#" data-slider__item="3"></a></li>
-					</ul>
+						<ul class="slider__pagination">
+							<!--<li class="slider__pagination-item slider__pagination-item_tmpl"><a href="#" data-slider__item="0">0</a></li>-->
+							<li class="slider__pagination-item"><a href="#" data-slider__item="0" class="active"></a></li>
+							<li class="slider__pagination-item"><a href="#" data-slider__item="1"></a></li>
+							<li class="slider__pagination-item"><a href="#" data-slider__item="2"></a></li>
+							<li class="slider__pagination-item"><a href="#" data-slider__item="3"></a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
