--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<img class="banner" src="img/bannerResume.png" alt="mybanner"></img>
 			</div>
 			-->
-			<div class="cut">
+			<div class="cut"> test
 				<div class="slider">
 					<div class="slider__images">
 						<div class="slider__images-wrap">
