Первый комит спусти несколько лет. Смотрю на свой код и ужасаюсь ... как я мог такое писать. Теперь думаю переписывать или старый код со временем сам исчезнет ...

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Ivan Tulinov</title>
+		<meta name="yandex-verification" content="a62cbc564b4a32a7" />
 		<link rel="stylesheet" href="style.css" media="screen">
 		<link rel="icon" href="img/ico.png" type="image/x-icon">
 		<link href='https://fonts.googleapis.com/css?family=Fira+Sans:700,300,400' rel='stylesheet' type='text/css'>
@@ -75,40 +76,41 @@
 			<div class="all">
 				<div class="borderSkils">
 					<p>
-					<span class="title">Общее:</span> <br />
-- BackEnd разработчик <br />
-- FrontEnd разработчик <br />
-- Верстальщик <br />
-- Дизайнер <br />
+						<span class="title">Общее:</span> <br />
+						- BackEnd разработчик <br />
+						- FrontEnd разработчик <br />
+						- Верстальщик <br />
+						- Дизайнер <br />
 					</p>
 				</div>
 				<div class="borderSkils">
 					<p>
-					<span class="title">Навыки:</span> <br />
-- Проектирование<br />
-- Прототипирование<br />
-- Дизайн<br />
-- Кодирование<br />
-- Тестирование<br />
-- Внедрение<br />
-- Сопровождение<br />
+						<span class="title">Навыки:</span> <br />
+						- Проектирование<br />
+						- Прототипирование<br />
+						- Дизайн<br />
+						- Кодирование<br />
+						- Тестирование<br />
+						- Внедрение<br />
+						- Сопровождение<br />
 					</p>
 				</div>
 				<div class="borderSkils">
 					<p>
 					<span class="title">Технологии:</span> <br />
-- ASP.NET MVC<br />
-- MS SQL<br />
-- HTML (5) / CSS (3)<br />
-- JavaScript<br />
+						- MS SQL<br />
+						- HTML (5)<br />
+						- CSS (3)<br />
+						- JavaScript<br />
+						- SSJS ( WebTutor )<br />
 					</p>
 				</div>
 				<div class="borderSkils">
 					<p>
 					<span class="title">Дополнительно:</span> <br />
-- Agile, Scrum<br />
-- Git<br />
-- Trello <br />
+						- Agile, Scrum<br />
+						- Git<br />
+						- Trello <br />
 					</p>
 				</div>
 			</div>
@@ -116,36 +118,37 @@
 		
 		<div class="container">
 			<div class="borderSkilsTheRest">
+					<h2>Опыт работы вне web-разработки:</h2>
 				<p class="SkilsOfBank">
 					<span class="titleBank">R-Style:</span> <br />
-- 8 лет разработки на RSL (RS-Bank, RS-Retail); <br />
-- Сопровождение, настройка, написание и адаптация макросов; <br />
-- Опыт перехода с RS-Bank на ЦФТ <br />
+				- 8 лет разработки на RSL (RS-Bank, RS-Retail); <br />
+				- Сопровождение, настройка, написание и адаптация макросов; <br />
+				- Опыт перехода с RS-Bank на ЦФТ <br />
 				</p>
 				<p class="SkilsOfBank">
 					<span class="titleBank">Windows Script Host:</span> <br />
-- написание макросов на JScript для автоматизации<br />
-рутинных, ежедневных задач <br />
-<br />
+						- написание макросов на JScript для автоматизации<br />
+						рутинных, ежедневных задач <br />
+						<br />
 				</p>
 				<p class="SkilsOfBank">
 					<span class="titleBank">Банковское ПО:</span> <br />
-- работы с крипто системами (КА и шифрование):УТА, КМ, <br />
-АРМ КБР, АРМ ПУР, СКАД «Сигнатура», Верба;<br />
-- полное сопровождение платежей и отчетности в ЦБ;<br />
-- Клиент-Банк (Bifit)<br />
+						- работы с крипто системами (КА и шифрование):УТА, КМ, <br />
+						АРМ КБР, АРМ ПУР, СКАД «Сигнатура», Верба;<br />
+						- полное сопровождение платежей и отчетности в ЦБ;<br />
+						- Клиент-Банк (Bifit)<br />
 				</p>
 				<p class="SkilsOfBank">
 					<span class="titleBank">Системное администрирование:</span> <br />
-- развертывание и настройка ActiveDirectory, DNS, DHCP, TMG(ISA), WSUS;<br />
-- написание макросов для GPO на WSH;<br />
-- управление резервным копированием (в  т.ч. Acronis);<br />
-- развертывание и сопровождение Jaber клиента в внутренней сети;<br />
-- централизованное развертывание и сопровождение антивирусного ПО;<br />
-- настройка миниАТС (Panasonic KX-TDA100);<br />
-- развертывание и настройка серверов/рабочих станций; <br />
-- программная виртуализация;<br />
-- сопровождение почтового сервера (IBM Lotus Domino Server)<br />
+						- развертывание и настройка ActiveDirectory, DNS, DHCP, TMG(ISA), WSUS;<br />
+						- написание макросов для GPO на WSH;<br />
+						- управление резервным копированием (в  т.ч. Acronis);<br />
+						- развертывание и сопровождение Jaber клиента в внутренней сети;<br />
+						- централизованное развертывание и сопровождение антивирусного ПО;<br />
+						- настройка миниАТС (Panasonic KX-TDA100);<br />
+						- развертывание и настройка серверов/рабочих станций; <br />
+						- программная виртуализация;<br />
+						- сопровождение почтового сервера (IBM Lotus Domino Server)<br />
 				</p>
 			</div>
 		</div>
