add records about WebTutor

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 				<div class="borderSkils">
 					<p>
 						<span class="title">Общее:</span> <br />
-						- BackEnd разработчик <br />
-						- FrontEnd разработчик <br />
-						- Верстальщик <br />
-						- Дизайнер <br />
+						- back-end разработчик <br />
+						- front-end разработчик <br />
+						- full stack developer <br />
+						- дизайнер <br />
 					</p>
 				</div>
 				<div class="borderSkils">
@@ -98,11 +98,11 @@
 				<div class="borderSkils">
 					<p>
 					<span class="title">Технологии:</span> <br />
-						- MS SQL<br />
-						- HTML (5)<br />
-						- CSS (3)<br />
-						- JavaScript<br />
-						- SSJS ( WebTutor )<br />
+					- HTML (5)<br />
+					- CSS (3)<br />
+					- JavaScript<br />
+					- SSJS ( WebTutor )<br />
+					- MS SQL<br />
 					</p>
 				</div>
 				<div class="borderSkils">
@@ -111,14 +111,32 @@
 						- Agile, Scrum<br />
 						- Git<br />
 						- Trello <br />
+						- figma <br />
+						- photoshop <br />
 					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="container">
+			<div class="borderSkilsTheRest container_skills">
+				<h2>Навыки в web-разработке:</h2>
+				<div class="container_skills_item">
+					<ul>
+						<li>Знание/понимание модели данных WebTutor</li>
+						<li>Написание кода на SSJS. Агенты, шаблоны, выгрузки, настраиваемые отчеты и т.п. вещи. Весь спектр функционала WT</li>
+						<li>Верстка макетов любой сложности (html, css, js)</li>
+						<li>Знания T-SQL: left join, cross apply, умение работать с курсором, индексы</li>
+						<li>Автоматизация высоконагруженных программных решений</li>
+					</ul>
+					<div class="for_search">WebTutor разработка разработчик developer WebSoft фронт-енд фронтенд фронт енд работа microsoft </div>
 				</div>
 			</div>
 		</div>
 		
 		<div class="container">
 			<div class="borderSkilsTheRest">
-					<h2>Опыт работы вне web-разработки:</h2>
+					<h2 class="old_adaptive">Опыт вне web-разработки:</h2>
 				<p class="SkilsOfBank">
 					<span class="titleBank">R-Style:</span> <br />
 				- 8 лет разработки на RSL (RS-Bank, RS-Retail); <br />
